<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBack"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/the_grooms_parents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/txt_grooms_parents"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/names" />

    <EditText
        android:id="@+id/enter_names_of_grooms_parents"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/edit_text_grooms_parents"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/the_grooms_parents" />

    <TextView
        android:id="@+id/the_brides_parents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/txt_brides_parents"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_names_of_grooms_parents" />

    <EditText
        android:id="@+id/enter_names_of_brides_parents"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/edit_text_brides_parents"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/the_brides_parents" />

    <TextView
        android:id="@+id/name_of_event_hall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/txt_name_event_hall"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/enter_the_name_of_event_hall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_names_of_brides_parents" />

    <EditText
        android:id="@+id/enter_the_name_of_event_hall"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/edit_text_name_of_hall"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/textView_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_of_event_hall" />

    <TextView
        android:id="@+id/textView_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/txt_address"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/enter_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_the_name_of_event_hall" />

    <EditText
        android:id="@+id/enter_address"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/edit_text_address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/the_date_of_wedding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_address" />

    <TextView
        android:id="@+id/the_date_of_wedding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/txt_date"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/enter_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_address" />

    <EditText
        android:id="@+id/enter_date"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:hint="@string/edit_text_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/the_date_of_wedding"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/the_time_of_wedding_ceremony"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/txt_time"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_date" />

    <EditText
        android:id="@+id/enter_time"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/edit_text_time"
        android:importantForAutofill="no"
        android:inputType="time"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/the_time_of_wedding_ceremony" />

    <Button
        android:id="@+id/button_next_screen2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-thin"
        android:text="@string/next_screen2"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_time" />


</androidx.constraintlayout.widget.ConstraintLayout>