<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/waiting_for_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/event_hall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_hall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/imageView_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waiting_for_you" />

    <ImageView
        android:id="@+id/imageView_camera"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/set_content_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_hall"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/button_take_photo"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_button"
        android:focusable="true"
        android:fontFamily="sans-serif-thin"
        android:text="@string/btn_take_photo"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_camera" />

    <VideoView
        android:id="@+id/videoView_video"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/set_content_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_take_photo" />


    <LinearLayout
        android:id="@+id/Linear_all_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoView_video">

        <LinearLayout
            android:id="@+id/Linear_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_take_video"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_button"
                android:focusable="true"
                android:fontFamily="sans-serif-thin"
                android:text="@string/btn_take_video"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_play"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_button"
                android:focusable="true"
                android:fontFamily="sans-serif-thin"
                android:text="@string/btn_play"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button_next_screen3"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-thin"
            android:text="@string/next_screen3"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>